# korean-patent-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  kipris_api.py  pyproject.toml  server.py  smithery.yaml
src/korean_patent_mcp/: __init__.py  kipris_api.py  middleware.py  server.py
