[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "korean-patent-mcp"
version = "0.1.0"
description = "MCP server for KIPRIS (Korean Intellectual Property Rights Information Service) - Search and analyze Korean patents with AI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "kipris", "patent", "korea", "korean-patent", "intellectual-property", "citation-analysis"]
authors = [
    { name = "DiME", email = "contact@dime.kr" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
korean-patent-mcp = "korean_patent_mcp.server:main"

[project.urls]
Homepage = "https://www.dime.kr"
Repository = "https://github.com/khreat/korean-patent-mcp"
Issues = "https://github.com/khreat/korean-patent-mcp/issues"
Documentation = "https://techcurator.kr"

[tool.hatch.build.targets.wheel]
packages = ["src/korean_patent_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
